[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.6.10"
thiserror = "1.0.24"
arrayref = "0.3.6"
spl-token = {version = "3.1.0", features = ["no-entrypoint"]}

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.6.10"
solana-sdk = "1.6.10"
solana-validator = "1.6.10"

[lib]
crate-type = ["cdylib", "lib"]
